--- a/index.html
+++ b/index.html
@@ -2,100 +2,188 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Easybank landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
+  <link rel="stylesheet" href="style.css">
+  <title>Easybank landing page | Frontend Mentor</title>
+  <!-- <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  </style> -->
 </head>
 <body>
-
-  Home
-  About
-  Contact
-  Blog
-  Careers
-
-  Request Invite
-
-
-
-  Next generation digital banking
-
-  Take your financial life online. Your Easybank account will be a one-stop-shop 
-  for spending, saving, budgeting, investing, and much more.
-
-  Request Invite
-
-
-
-  Why choose Easybank?
-
-  We leverage Open Banking to turn your bank account into your financial hub. Control 
-  your finances like never before.
-
-  Online Banking
-  Our modern web and mobile applications allow you to keep track of your finances 
-  wherever you are in the world.
-
-  Simple Budgeting
-  See exactly where your money goes each month. Receive notifications when you’re 
-  close to hitting your limits.
-
-  Fast Onboarding
-  We don’t do branches. Open your account in minutes online and start taking control 
-  of your finances right away.
-
-  Open API
-  Manage your savings, investments, pension, and much more from one account. Tracking 
-  your money has never been easier.
-
+  <header>
+    <div class="container flex">
+      <img src="/images/logo.svg" alt="logo">
+      <ul>
+        <li><a href="">Home</a></li>
+        <li><a href=""></a>About</li>
+        <li><a href=""></a>Contact</li>
+        <li><a href=""></a>Blog</li>
+        <li><a href=""></a>Careers</li>
+      </ul>
+      <button class="btn">Request Invite</button>
+    </div>
+  </header>
+  <section class="next-generation">
+    <div class="container flex">
+      <div class="left-1">
+        <h1>Next generation digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a one-stop-shop 
+          for spending, saving, budgeting, investing, and much more.
+        </p>
+      </div>
+      <div class="right-1">
+        <img src="/images/image-mockups.png" alt="image-mockups">
+      </div>
+    </div>
+  </section>
+  <section class="why">
+    <div class="container">
+      <h2>
+        Why choose Easybank?
+      </h2>
+      <p>
+        We leverage Open Banking to turn your bank account into your financial hub. Control 
+        your finances like never before.
+      </p>
+    <div class="flex features">
+      <div>
+        <img src="/images/icon-online.svg" alt="icon-online">
+        <h3>
+          Online Banking
+        </h3>
+        <p>
+          Our modern web and mobile applications allow you to keep track of your finances 
+          wherever you are in the world.
+        </p>
+      </div>
+      <div>
+        <img src="/images/icon-budgeting.svg" alt="icon-budgeting">
+        <h3>
+          Simple Budgeting
+        </h3>
+        <p>
+          See exactly where your money goes each month. Receive notifications when you’re 
+          close to hitting your limits.
+        </p>
+      </div>
+      <div>
+        <img src="/images/icon-onboarding.svg" alt="icon-onboarding">
+        <h3>
+          Fast Onboarding
+        </h3>
+        <p>
+          We don’t do branches. Open your account in minutes online and start taking control 
+          of your finances right away.
+        </p>
+      </div>
+      <div>
+        <img src="/images/icon-api.svg" alt="icon-api">
+        <h3>
+          Open API
+        </h3>
+        <p>
+          Manage your savings, investments, pension, and much more from one account. Tracking 
+          your money has never been easier.
+        </p>
+      </div>
+    </div>
+  </section>
+  <section class="blog">
+    <div class="container">
+        <h5>
+          Latest Articles
+        </h5>
+      <div class="flex">
+        <div>
+          <article class="latest-article flex">
+            <img src="/images/image-currency.jpg" alt="image-currency">
+            <a href="" rel="author" class="author">By Claire Robinson</a>
+            <a href="" class="article-link">Receive money in any currency with no fees</a>
+            <p>
+              The world is getting smaller and we’re becoming more mobile. So why should you be 
+              forced to only receive money in a single …
+            </p>
+          </article>
+        </div>
+        <div>
+          <article class="latest-article flex">
+            <img src="/images/image-confetti.jpg" alt="image-currency">
+            <a href="" rel="author" class="author">By Claire Robinson</a>
+            <a href="" class="article-link">Our invite-only Beta accounts are now live!</a>
+            <p>
+              After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
+              It’s easy to request an invite through the site ...
+            </p>
+          </article>
+        </div>
+        <div>
+          <article class="latest-article flex">
+            <img src="/images/image-plane.jpg" alt="image-currency">
+            <a href="" rel="author" class="author">By Wilson Hutton</a>
+            <a href="" class="article-link">Take your Easybank card wherever you go</a>
+            <p>
+             We want you to enoy your travels. This is why we don't charge any fees on purchases while you're abroad. We'll even show you...
+            </p>
+          </article>
+        </div>
+        <div>
+          <article class="latest-article flex">
+            <img src="/images/image-restaurant.jpg" alt="image-currency">
+            <a href="" rel="author" class="author">By Wilson Hutton</a>
+            <a href="" class="article-link">Treat yourself without worrying about money</a>
+            <p>
+              Our simple budgeting feature allows you to separate out your spending and set 
+              realistic limits each month. That means you …
+            </p>
+          </article>
+        </div>
+      </div>
+  </section>
+  <footer>
+    <div class="container flex">
+      <div>
+        <img src="/images/logo.svg" alt="logo">
+        <ul class="social-links">
+          <li><a href="">
+            <img src="/images/icon-facebook.svg" alt="icon-facebook">
+          </a></li>
+          <li><a href="">
+            <img src="/images/icon-youtube.svg" alt="icon-youtube">
+          </a></li>
+          <li><a href="">
+            <img src="/images/icon-twitter.svg" alt="icon-twitter">
+          </a></li>
+          <li><a href="">
+            <img src="/images/icon-pinterest.svg" alt="icon-pinterest">
+          </a></li>
+          <li><a href="">
+            <img src="/images/icon-instagram.svg" alt="icon-instagram">
+          </a></li>
+        </ul>
+      </div>
+      <ul>
+        <li><a href="">About Us</a></li>
+        <li><a href="">Contact</a></li>
+        <li><a href="">Blog</a></li>
+      </ul>
+      <ul>
+        <li><a href="">Careers</a></li>
+        <li><a href="">Support</a></li>
+        <li><a href="">Privacy Policy</a></li>
+      </ul>
+      <div>
+        <button class="btn">Request Invite</button>
+        <p>&copy; EasyBank. All Rights Reserved</p>
+      </div>
+    </div>
+  </footer>
   
-
-  Latest Articles
-
-  By Claire Robinson
-  Receive money in any currency with no fees
-  The world is getting smaller and we’re becoming more mobile. So why should you be 
-  forced to only receive money in a single …
-
-  By Wilson Hutton
-  Treat yourself without worrying about money
-  Our simple budgeting feature allows you to separate out your spending and set 
-  realistic limits each month. That means you …
-
-  By Wilson Hutton
-  Take your Easybank card wherever you go
-  We want you to enjoy your travels. This is why we don’t charge any fees on purchases 
-  while you’re abroad. We’ll even show you …
-
-  By Claire Robinson
-  Our invite-only Beta accounts are now live!
-  After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
-  It’s easy to request an invite through the site ...
-
-  
-
-  About Us
-  Contact
-  Blog
-  Careers
-  Support
-  Privacy Policy
-
-  Request Invite
-
-  © Easybank. All Rights Reserved
-  
-  <div class="attribution">
+  <!-- <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div> -->
 </body>
 </html>
