--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 </head>
 <body>
   <header>
-    <div class="container flex">
+    <div class="container flex navigation">
       <img src="/images/logo.svg" alt="logo">
-      <ul>
-        <li><a href="">Home</a></li>
-        <li><a href=""></a>About</li>
-        <li><a href=""></a>Contact</li>
-        <li><a href=""></a>Blog</li>
-        <li><a href=""></a>Careers</li>
+      <ul class="nav">
+        <li><a href="" class="nav-link">Home</a></li>
+        <li><a href="" class="nav-link">About</a></li>
+        <li><a href="" class="nav-link">Contact</a></li>
+        <li><a href="" class="nav-link">Blog</a></li>
+        <li><a href="" class="nav-link">Careers</a></li>
       </ul>
       <button class="btn">Request Invite</button>
     </div>
