--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
           Take your financial life online. Your Easybank account will be a one-stop-shop 
           for spending, saving, budgeting, investing, and much more.
         </p>
+        <button class="btn">Request Invite</button>
+
       </div>
       <div class="right-1">
         <img src="/images/image-mockups.png" alt="image-mockups">
@@ -44,12 +46,12 @@
       <h2>
         Why choose Easybank?
       </h2>
-      <p>
+      <p id="why-text">
         We leverage Open Banking to turn your bank account into your financial hub. Control 
         your finances like never before.
       </p>
     <div class="flex features">
-      <div>
+      <div class="single-feature">
         <img src="/images/icon-online.svg" alt="icon-online">
         <h3>
           Online Banking
@@ -59,7 +61,7 @@
           wherever you are in the world.
         </p>
       </div>
-      <div>
+      <div class="single-feature">
         <img src="/images/icon-budgeting.svg" alt="icon-budgeting">
         <h3>
           Simple Budgeting
@@ -69,7 +71,7 @@
           close to hitting your limits.
         </p>
       </div>
-      <div>
+      <div class="single-feature">
         <img src="/images/icon-onboarding.svg" alt="icon-onboarding">
         <h3>
           Fast Onboarding
@@ -79,7 +81,7 @@
           of your finances right away.
         </p>
       </div>
-      <div>
+      <div class="single-feature">
         <img src="/images/icon-api.svg" alt="icon-api">
         <h3>
           Open API
