--- a/index.html
+++ b/index.html
@@ -101,45 +101,53 @@
       <div class="flex">
         <div>
           <article class="latest-article flex">
-            <img src="/images/image-currency.jpg" alt="image-currency">
-            <a href="" rel="author" class="author">By Claire Robinson</a>
-            <a href="" class="article-link">Receive money in any currency with no fees</a>
-            <p>
+              <img src="/images/image-currency.jpg" alt="image-currency">
+            <div class="article-content">
+              <a href="" rel="author" class="author">By Claire Robinson</a> 
+              <a href="" class="article-link">Receive money in any currency with no fees</a>
+              <p>
               The world is getting smaller and we’re becoming more mobile. So why should you be 
               forced to only receive money in a single …
-            </p>
+              </p>
+            </div>
           </article>
         </div>
         <div>
           <article class="latest-article flex">
             <img src="/images/image-confetti.jpg" alt="image-currency">
-            <a href="" rel="author" class="author">By Claire Robinson</a>
-            <a href="" class="article-link">Our invite-only Beta accounts are now live!</a>
-            <p>
+            <div class="article-content">
+              <a href="" rel="author" class="author">By Claire Robinson</a> 
+              <a href="" class="article-link">Our invite-only Beta accounts are now live!</a>
+              <p>
               After a lot of hard work by the whole team, we’re excited to launch our closed beta. 
               It’s easy to request an invite through the site ...
             </p>
+            </div>
           </article>
         </div>
         <div>
           <article class="latest-article flex">
             <img src="/images/image-plane.jpg" alt="image-currency">
-            <a href="" rel="author" class="author">By Wilson Hutton</a>
-            <a href="" class="article-link">Take your Easybank card wherever you go</a>
-            <p>
-             We want you to enoy your travels. This is why we don't charge any fees on purchases while you're abroad. We'll even show you...
-            </p>
+            <div class="article-content">
+              <a href="" rel="author" class="author">By Wilson Hutton</a> 
+              <a href="" class="article-link">Take your Easybank card wherever you go</a>
+              <p>
+              We want you to enoy your travels. This is why we don't charge any fees on purchases while you're abroad. We'll even show you...
+              </p>
+            </div>
           </article>
         </div>
         <div>
           <article class="latest-article flex">
             <img src="/images/image-restaurant.jpg" alt="image-currency">
-            <a href="" rel="author" class="author">By Wilson Hutton</a>
-            <a href="" class="article-link">Treat yourself without worrying about money</a>
-            <p>
+            <div class="article-content">
+              <a href="" rel="author" class="author">By Wilson Hutton</a> 
+              <a href="" class="article-link">Treat yourself without worrying about money</a>
+              <p>
               Our simple budgeting feature allows you to separate out your spending and set 
               realistic limits each month. That means you …
-            </p>
+              </p>
+            </div>
           </article>
         </div>
       </div>
