--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="style.css">
   <title>Easybank landing page | Frontend Mentor</title>
-  <!-- <style>
-    .attribution { font-size: 11px; text-align: center; }
+  <style>
+    .attribution { font-size: 11px; text-align: center; background-color: hsl(233, 26%, 24%);; }
     .attribution a { color: hsl(228, 45%, 44%); }
-  </style> -->
+  </style>
 </head>
 <body>
   <header>
@@ -199,9 +199,9 @@
     </div>
   </footer>
   <script src="script.js"></script>
-  <!-- <div class="attribution">
+  <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div> -->
+    Coded by <a href="https://nneszly-portofolio.netlify.com/">Norbert Neszly</a>.
+  </div>
 </body>
 </html>
