footer url changed

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
   <script src="script.js"></script>
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="https://nneszly-portofolio.netlify.com/">Norbert Neszly</a>.
+    Coded by <a href="https://github.com/wuzer1">Norbert Neszly</a>.
   </div>
 </body>
 </html>
